little/src/App.css
 body{
    background-color: bisque;
    font-family: 'Markazi Text', serif;
    margin-top:  3rem;
    margin-bottom: 3rem;
    margin-left: 5%;
    margin-right: 5%;
}

 .container {

  display: grid;
  grid-template-columns:repeat(3, 100px);
  grid-template-rows: 2fr 1fr;

  }

Row{
  align-items: center;
  margin: 1rem;
}

  
  .ms-auto{
    
    align-items: center;
  }

   .ms-auto :hover{
    color: white;
    font-style: italic bold;
    background-color: gray;
   }

.specialsHeading{
  padding: 1.5rem;
}

.specials{
  display: flex;
  
}

article{
  width: 250px;
  margin: .5rem;
 
}
.footer{
  display: flex;
}
.footerDiv  ul{
  
  display: flex;
  flex-direction: column;
}


article img{
  width: 270px;
  height: 230px;
  object-fit: cover;
}

.RestaurantChef{
  width: 270px;
  height: 230px;
  border-radius: 7px;
}


.col-3-sm{
  max-width:190px ;
  height: 230px;
  border-radius: 7px;
  margin-left: 4px;
}

.col-3-sm-2{
  width: 190px;
  height: 230px;
  border-radius: 7px;
  margin-left: 4px;
 
}
/* 
Footer {
  display: flex;
  justify-content: space-around;
  align-items: center;

} */

.footerNav Navigation{
  display: grid;
}

.iconSocial{
  display: flex;
  margin: 5px;
  align-items: baseline;
  
}

